# near-ai-agent

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
contracts/agent/: Cargo.toml
contracts/agent/scripts/: build.sh
contracts/agent/src/: constants.rs  errors.rs  lib.rs  models.rs
contracts/agent/tests/: integration.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx  near.ts  types.ts
frontend/src/components/: HistoryList.tsx  IntentForm.tsx  PortfolioView.tsx
frontend/src/context/: NearContext.tsx
frontend/src/hooks/: useNear.ts
frontend/src/tests/: contract.test.ts
frontend/src/utils/: contract.ts
scripts/: deploy.sh  eth-watcher.js
