[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
near-sdk = "4.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1", rev = "e27b9bfa6e0f340224d1dcff3ff3d8be80f8da82" }


