[package]
name = "agent"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "NEAR AI Agent Contract"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.0.0", features = ["legacy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.0"
borsh-derive = "1.0"
hex = "0.4"
near-gas = "0.2.5"
near-token = "0.2.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
